@@ -53,6 +53,8 @@ public abstract class VectorTableModel extends AbstractTableModel {
             fireTableRowsDeleted(rowIndex, rowIndex);
     }
     
+    public Object getRow(int rowIndex) { return table.get(rowIndex); }
+    
     public void lock() { lockCount++; }
     
     public void unlock() {
