@@ -1,12 +1,12 @@
 /*
  * Copyright 2006 Carsten Rambow
- * 
+ *
  * Licensed under the GNU Public License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.gnu.org/licenses/gpl.txt
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -18,6 +18,7 @@
 package de.elomagic.hl7inspector.gui.actions;
 
 import de.elomagic.hl7inspector.StartupProperties;
+import de.elomagic.hl7inspector.gui.ArchiveFileSelectDialog;
 import de.elomagic.hl7inspector.gui.ImportOptionBean;
 import de.elomagic.hl7inspector.gui.ImportOptionsDialog;
 import de.elomagic.hl7inspector.gui.ReaderProgessDialog;
@@ -28,6 +29,8 @@ import java.awt.event.KeyEvent;
 import java.io.BufferedInputStream;
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.FileNotFoundException; 
+import java.io.IOException;
 import java.io.InputStream;
 import java.util.Enumeration;
 import java.util.Vector;
@@ -64,58 +67,71 @@ public class FileRecentOpenAction extends AbstractAction {
         files.insertElementAt(file, 0);
         
         StartupProperties.getInstance().setRecentFiles(files);
-                
+        
         ImportOptionBean options = new ImportOptionBean();
         options.setSource(file.getAbsolutePath());
         options.setFileSize(file.length());
         options.setMessageEncoding((file.toString().toLowerCase().endsWith("xml"))?MessageEncoding.XML_FORMAT:MessageEncoding.HL7_FORMAT);
         
-        ImportOptionsDialog dlg = new ImportOptionsDialog();
-        if (dlg.execute(options)) {
-            options = dlg.getImportOptions();
-            
+        try {
+            InputStream fin = null;
             try {
-                InputStream fin;
-                try {
-                    // Check if compressed file                   
-                    ZipFile zipFile = new ZipFile(file);
-
-                    Enumeration enu = zipFile.entries();
+                // Check if compressed file
+                ZipFile zipFile = new ZipFile(file, ZipFile.OPEN_READ);
+                
+                Enumeration enu = zipFile.entries();
+                
+                if (!enu.hasMoreElements()) {
+                    throw new FileNotFoundException("No file found inside compressed file.");
+                }
+                
+                ZipEntry entry = (ZipEntry) enu.nextElement();
+                
+                if (enu.hasMoreElements()) {
+                    entry = null;
+                    ArchiveFileSelectDialog dialog = new ArchiveFileSelectDialog(zipFile);
                     
-                    if (!enu.hasMoreElements()) {
-                        throw new Exception("No file found inside compressed file.");
+                    if (dialog.ask()) {
+                        entry = dialog.getSelectedEntry();                        
                     }
-                    
-                    ZipEntry entry = (ZipEntry) enu.nextElement();                        
+                }
+                                
+                if (entry != null) {
                     options.setFileSize(entry.getSize());
                     options.setSourceLabel("Zip Archive");
-                    //options.setSource(entry.getName());
+                    options.setSource(entry.getName() + " (" + options.getSource() + ")");                
                     
-                    // FEATURE "ChooseDialog" must popup when using archive with more then one file.
-                    if (enu.hasMoreElements()) {
-                        SimpleDialog.info("The file includes more then one compressed file.\nRead file " + entry.getName() + ".");
-                    }
-                        
                     fin = zipFile.getInputStream(entry);
-                } catch (Exception ee) {
-                    // No zip archive
-                    fin = new FileInputStream(file);
-                }                
-                
-                try {
-                    BufferedInputStream bin = new BufferedInputStream(fin);
-                    try {
-                        ReaderProgessDialog readerDlg = new ReaderProgessDialog();
-                        readerDlg.read(bin, options);
-                    } finally {
-                        bin.close();
-                    }
-                } finally {
-                    fin.close();
                 }
-            } catch (Exception ee) {
-                SimpleDialog.error(ee, "Error during reading file.");
+            } catch (IOException ee) {
+                // No zip archive
+                fin = new FileInputStream(file);
             }
+            
+            if (fin != null) {
+                ImportOptionsDialog dlg = new ImportOptionsDialog();
+                if (dlg.execute(options)) {
+                    options = dlg.getImportOptions();
+                    
+                    try {
+                        try {
+                            BufferedInputStream bin = new BufferedInputStream(fin);
+                            try {
+                                ReaderProgessDialog readerDlg = new ReaderProgessDialog();
+                                readerDlg.read(bin, options);
+                            } finally {
+                                bin.close();
+                            }
+                        } finally {
+                            fin.close();
+                        }
+                    } catch (Exception ee) {
+                        SimpleDialog.error(ee, "Error during reading file.");
+                    }
+                }
+            }
+        } catch (FileNotFoundException ee) {
+            SimpleDialog.error(ee, "Error during reading file.");
         }
     }
     
